--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @import "tailwindcss";
 
+@theme {
+  --color-primary:#B21617; 
+  --color-secondary:#DADAD0; 
+  --color-accent:#141813; 
+}
+
 @tailwind utilities;
