Responsive Hero Section

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 @import "tailwindcss";
 
-/* Tambahkan font face di sini */
 @font-face {
   font-family: "Hanson";
   src: url("/fonts/Hanson-Bold.ttf") format("truetype");
@@ -8,11 +7,13 @@
   font-style: normal;
 }
 
-/* Warna theme kamu tetap */
 @theme {
   --color-primary:#B21617; 
   --color-secondary:#DADAD0; 
   --color-accent:#141813; 
+  --color-blood:#FF0002;
+
+  --font-hanson: "Hanson", sans-serif;
 }
 
 /* Ini tetap di paling bawah */
