--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@
   --color-secondary:#DADAD0;
 
   --font-hanson: "Hanson", sans-serif;
+  --font-figtree: "Figtree", sans-serif;
 }
 
 @tailwind utilities;
