--- a/src/index.css
+++ b/src/index.css
@@ -44,8 +44,8 @@
 
 
 @theme {
-  --color-primary:#141813;
-  --color-secondary:#DADAD0;
+  --color-primary:#A6FF4D;
+  --color-secondary:#141813;
 
   --font-hanson: "Hanson", sans-serif;
   --font-figtree: "Figtree", sans-serif;
