--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,17 @@
 }
 
 @tailwind utilities;
+
+/* html, body {
+  overflow: hidden;
+  height: 100%;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+} */
