--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,13 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "Helvetica";
+  src: url("./assets/fonts/HelveticaNowDisplay-Bold.otf") format("opentype");
+  font-weight: 700;
+  font-style: normal;
+}
+
 @keyframes marquee {
   0% {
     transform: translateX(0%);
@@ -49,6 +56,7 @@
 
   --font-hanson: "Hanson", sans-serif;
   --font-figtree: "Figtree", sans-serif;
+  --font-helvetica: "Helvetica", sans-serif;
 }
 
 @tailwind utilities;
